[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Sc01.tscn" type="PackedScene" id=1]
[ext_resource path="res://IMG/grass.png" type="Texture" id=2]
[ext_resource path="res://IMG/dialog.png" type="Texture" id=3]
[ext_resource path="res://Fonts/press-start-2p.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Blackscreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Room01.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/BossRoom.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 256, 64 )

[node name="Grass" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 269, 143 )
texture = ExtResource( 2 )

[node name="Sc01" parent="." instance=ExtResource( 1 )]

[node name="BossRoom" parent="." instance=ExtResource( 8 )]
position = Vector2( 1728, 640 )

[node name="Room01" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1500, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Blackscreen" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="Dialog" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.8 )
position = Vector2( 111, 212 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Dialog"]
margin_left = -176.0
margin_top = -46.0
margin_right = 200.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Text Example пример текста пример текста пример текста"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Dialog2" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 0.639216, 0.203922, 0.203922, 0.8 )
position = Vector2( 316, 25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
flip_h = true
flip_v = true

[node name="Label" type="Label" parent="CanvasLayer/Dialog2"]
margin_left = -200.0
margin_top = -32.0
margin_right = 176.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Text Example пример текста пример текста пример текста"
align = 1
valign = 1
autowrap = true
uppercase = true
